name:                teleport
version:             0.0.0.10
synopsis:            A tool to quickly switch between directories
description:
    A tool to quickly switch between directories 
    Please see README.md for more details
homepage:            https://github.com/bollu/teleport#readme
license:             MIT
license-file:        LICENSE
author:              Siddharth Bhat
maintainer:          siddu.druid@gmail.com
copyright:           2010 Siddharth Bhat
category:            Tools
build-type:          Simple
bug-reports:         https://github.com/bollu/teleport/issues 
stability:           Alpha
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files:
    README.md
    Changelog.md
    stack.yaml
    teleport.sh


library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable teleport-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , teleport
                     , turtle
                     , optparse-applicative
                     , system-filepath
                     , text
                     , configurator
                     , aeson
                     , bytestring
                     , ansi-terminal
  default-language:    Haskell2010

test-suite teleport-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , teleport
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bollu/teleport
