name:                teleport
version:             0.0.0.9
synopsis:            A tool to quickly switch between directories
description:         Please see README.md
homepage:            https://github.com/bollu/teleport#readme
license:             MIT
license-file:        LICENSE
author:              Siddharth Bhat
maintainer:          siddu.druid@gmail.com
copyright:           2010 Siddharth Bhat
category:            Tools
build-type:          Simple
bug-reports:         https://github.com/bollu/teleport/issues 
stability:           Alpha
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable warp-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp-haskell
                     , turtle
                     , optparse-applicative
                     , system-filepath
                     , text
                     , configurator
                     , aeson
                     , bytestring
                     , ansi-terminal
  default-language:    Haskell2010

test-suite warp-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , warp-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bollu/warp-haskell
